--- a/test/index.html
+++ b/test/index.html
@@ -1,23 +1,15 @@
 <!doctype html>
-<head>
+<html>
+  <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Mocha Spec Runner</title>
-    <link rel="stylesheet" href="lib/mocha/mocha.css">
-</head>
-<body>
+    <title>Mocha specs</title>
+    <link rel="stylesheet" href="mocha/mocha.css">
+  </head>
+  <body>
     <div id="mocha"></div>
-    <script src="lib/mocha/mocha.js"></script>
-    <script>mocha.setup('bdd')</script>
-    <!-- assertion framework -->
-    <script src="lib/chai.js"></script>
-    <script>var expect = chai.expect</script>
-
-    <!-- include source files here... -->
-
-    <!-- include spec files here... -->
-    <script src="spec/test.js"></script>
-
-    <script>mocha.run()</script>
-</body>
+    <script src="mocha/mocha.js"></script>
+    <script src="sinon/lib/sinon.js"></script>
+    <script src="sinon/lib/sinon/spy.js"></script>
+    <script data-main="runner" src="requirejs/require.js"></script>
+  </body>
 </html>
